css/layouts/responsive.css
/**
 * @file
 * Positioning for a responsive layout.
 *
 * Define CSS classes to create a fluid grid layout with optional sidebars
 * depending on whether blocks are placed in the left or right sidebars.
 *
 * This layout uses the Zen Grids plugin for Compass: http://zengrids.com
 */

/**
 * Center the page.
 *
 * For screen sizes larger than 1200px, prevent excessively long lines of text
 * by setting a max-width.
 */
#page,
.region-bottom {
  margin-left: auto;
  margin-right: auto;
  max-width: 1200px;
}

/* Apply the shared properties of grid items in a single, efficient ruleset. */
#header, #content, #navigation,
.region-sidebar-first,
.region-sidebar-second,
#footer {
  padding-left: 10px;
  padding-right: 10px;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
  word-wrap: normal;
  *behavior: url("/path/to/boxsizing.htc");
  _display: inline;
  _overflow: hidden;
  _overflow-y: visible;
}

/* Containers for grid items and flow items. */
#header,
#main,
#footer {
  *position: relative;
  *zoom: 1;
}
#header:before,
#header:after,
#main:before,
#main:after,
#footer:before,
#footer:after {
  content: "";
  display: table;
}
#header:after,
#main:after,
#footer:after {
  clear: both;
}

/* Navigation bar */
  #main, #content {
    padding-top: 3em;
    position: relative;
    background-color: #FFFFFF;
  }
  #navigation {
    /* Move the navbar up inside #main's padding. */
    position: absolute;
    background: url("../../images/gl-nav.gif") repeat-x scroll left top #006171;
    top: 0;
    width: 100%;
    min-width: 900px;
  }
  #navigation .links li,
  #navigation .menu li {
    border-right: 1px solid #266573;
    padding: 1.2em 1em; /* LTR */; /* LTR */
  }
  #navigation .menuparent > ul {
    margin-top: .9em;
    max-width: 15em !important;
  }
  #navigation .links li > ul li,
  #navigation .menu li > ul li {
    padding: .5em;
    border-bottom: 1px solid #FFFFFF;
    background-color: #006171;
    font-size: .8em;
  }
  #navigation .links li > ul li:hover,
  #navigation .menu li > ul li:hover,
  #navigation .links li > ul li:focus,
  #navigation .menu li > ul li:focus {
    background-color: #004752;
  }
  #navigation .links a[href="/"],
  #navigation .menu a[href="/"] {
  /* Home icon display */
  background: transparent url("../../images/home.png") no-repeat scroll center 9px;
  width: 1.8em;
  height: 1.3em;
  display: block;
  text-indent: -1000px;
  margin-top: -.3em;
  }
  .views-view-grid td article {
    min-height: 150px;
    float: left;
  }

@media only screen and (max-width: 799px) {
  #main, #content {
    /* Move all the children of #main down to make room. */
    padding-top: 0;
  }
  #header {
    margin-top: 3.5em;
  }
  .header__logo, .header__logo img {
    width: 100%;
  }
  #navigation {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: #006171;
    height: 2em;
  }
  #navigation .links li,
  #navigation .menu li {
    float: left;
    clear: left;
    overflow: visible;
    background-color: #004652;
    min-width: 8em;
    padding: .5em;
  }
  .region-navigation {
    position: relative;
    padding-left: 1em;
  }
  .region-navigation::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0.6em;
    width: 1em;
    height: 0.125em;
    border-top: 0.375em double #FFFFFF;
    border-bottom: 0.125em solid #FFFFFF;
  }
  #navigation .block-superfish {
    position: fixed;
    top: 0;
    left: 0;
    width: 3em;
    padding-top:  2em;
    height: 0;
    overflow: hidden;
    z-index: 200;
  }
  #navigation .block-superfish:hover,
  #navigation .block-superfish:focus {
    cursor: pointer;
    overflow: visible;
  }
  #navigation .links li > ul li,
  #navigation .menu li > ul li {
    display: none;
  }
  .region-header .contextual-links-region {
    width: 100%;
  }
  .region-header .contextual-links-region:first-of-type {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 110;
    margin-top: -.6em;
    width: 90%;
  }
  .views-view-grid.cols-3 td {
    width: 100%;
    float: left;
  }
  .panel-3col-33-stacked .panel-col,
  .panel-3col-33-stacked .panel-col-last,
  .panel-3col-33-stacked .panel-col-first {
    width: 100%;
  }
  .inside {
    margin: .4em 0 !important;
  }
}

/* Footer region */
@media all and (min-width: 800px) {
  .region-footer .block.even {
    float: left;
    width: 14%;
  }
  .region-footer .block.odd {
    float: left;
    width: 30%;
  }
  .region-footer .block:first-child {
    width: 53%;
  }
}
@media all and (max-width: 799px) {
  .region-footer .block {
    width: 100%;
    float: left;
    clear: both;
    margin-top: 1em;
  }
}



/**
 * Use 5 grid columns for larger screens.
 */
@media all and (min-width: 800px) {

  /**
   * The layout when there is only one sidebar, the left one.
   */

  /* Span 4 columns, starting in 2nd column from left. */
  .sidebar-first #content {
    float: left;
    width: 75%;
    margin-left: 25%;
    margin-right: -100%;
  }

  /* Span 1 column, starting in 1st column from left. */
  .sidebar-first .region-sidebar-first {
    float: left;
    width: 25%;
    margin-left: -0.5em;
    margin-right: -25%;
    margin-top: .7em;
  }
.sidebar-first .block-menu-block .menu-block-wrapper {
  background: url("../../images/header-bkg.png") no-repeat scroll 5% 110% #EAF0F3;
  padding-bottom: 10em;
  }
  /**
   * The layout when there is only one sidebar, the right one.
   */

  /* Span 4 columns, starting in 1st column from left. */
  .sidebar-second #content {
    float: left;
    width: 80%;
    margin-left: 0%;
    margin-right: -80%;
  }

  /* Span 1 column, starting in 5th column from left. */
  .sidebar-second .region-sidebar-second {
    float: left;
    width: 20%;
    margin-left: 80%;
    margin-right: -100%;
  }

  /**
   * The layout when there are two sidebars.
   */

  /* Span 3 columns, starting in 2nd column from left. */
  .two-sidebars #content {
    float: left;
    width: 60%;
    margin-left: 20%;
    margin-right: -80%;
  }

  /* Span 1 column, starting in 1st column from left. */
  .two-sidebars .region-sidebar-first {
    float: left;
    width: 20%;
    margin-left: 0%;
    margin-right: -20%;
  }

  /* Span 1 column, starting in 5th column from left. */
  .two-sidebars .region-sidebar-second {
    float: left;
    width: 20%;
    margin-left: 80%;
    margin-right: -100%;
  }
}
/**
 * Bottom panel of three column staked 33/34/33.
 */
.rs-slideshow .field-name-field-read-more a {
  position: relative;
  padding: 5% 24% 0 5%;
}
@media all and (min-width: 800px) {
  .front.logged-in .panel-col-bottom .panels-ipe-sort-container .panels-ipe-portlet-wrapper:nth-child(odd),
  .front.not-logged-in .panel-col-bottom .panel-pane:nth-child(odd) {
    width:62.4%;
    float: left;
    clear: left;
    position: relative;
    min-height: 270px;
  }
  .front.logged-in .panel-col-bottom .panels-ipe-sort-container .panels-ipe-portlet-wrapper:nth-child(even),
  .front.not-logged-in .panel-col-bottom .panel-pane:nth-child(even) {
    width:33%;
    float: right;
    clear: right;
    position: relative;
    min-height: 270px;
  }
}
@media all and (max-width: 799px) {
  .rs-slideshow .field-name-field-read-more a {
    padding: 10% 20% 0 10%;
  }
}
/**
 * Middle panel of three column staked 33/34/33.
 */

  .front .home-summary {
    height: 328px;
  }
  .front .center-wrapper .panel-col .pane-block,
  .front .center-wrapper .panel-col-last .pane-block {
    padding: .5em;
    border: 1px solid #FFFFFF;
    min-height: 150px;
    max-height: 151px;
    margin: 0;
  }
  .front .center-wrapper .panel-col .pane-block li,
  .front .center-wrapper .panel-col-last .pane-block li {
    width:45%;
    min-width: 10em;
  }
  .front .center-wrapper .panel-col .pane-block li:first-child,
  .front .center-wrapper .panel-col-last .pane-block li:first-child {
    width: 84%;
    min-width: 8em;
    word-wrap: normal;
    white-space: pre-wrap;
    font-size: 2.25em;
  }
  .page-search-the-ppsr .views-view-grid td article{
    min-height: 260px;
    max-width: 240px;
  }
  .view-announcements {
    padding: 1em 1em 1em 18em;
  }

@media all and (max-width: 799px) {
  .front .home-summary {
    min-height: 234px;
  }
  .front .center-wrapper .panel-col-first,
  .front .center-wrapper .panel-col,
  .front .center-wrapper .panel-col-last {
    width: 99%;
  }
  .front .center-wrapper .panel-col-last .pane-block,
  .front .center-wrapper .panel-col .pane-block {
    background-color: #DAF0F6;
    background-image: none !important;
    padding: 1em 0;
    margin: .5em -.5em .5em .5em;
  }
  .front .center-wrapper .panel-col .pane-block li,
  .front .center-wrapper .panel-col-last .pane-block li {
    font-size: 1em;
    font-weight: bold;
  }
  .front .center-wrapper .panel-col .pane-block li a,
  .front .center-wrapper .panel-col-last .pane-block li a {
      background-image: none !important;
  }
  .sidebar-first .block-menu-block .menu-block-wrapper {
  padding-bottom: 1.5em;
  }
  .sidebar-first .block-menu-block h2 {
    text-align: center;
    margin: 0;
    width: 100%;
    border: 1px dotted #CCCCCC;
  }
  .breadcrumb {
    margin: -1em 0;
  }
  .view-announcements {
    padding: 1em;
    text-shadow: 1px 1px 3px #FFFFFF;
  }
}
@media all and (max-width: 499px) {
  .front .center-wrapper .panel-col .pane-block li,
  .front .center-wrapper .panel-col-last .pane-block li {
    font-size: .8em;
  }
}
/**
 * Responsive webforms
 */
@media all and (max-width: 799px) {
  .webform-component input[type="text"],
  .webform-component input[type="email"] {
    display: block;
    width: 100%;
  }
}

